# elevenlab_hackathon

./: .gitignore  README.md  mock_service.py  pyproject.toml  requirements.txt  service_entry.py  test_google_cloud_speech.py  test_language_model.py
backend/constants/: vals.py
backend/llm/: context_generators.py  mistral_statement_evaluator.py
backend/llm/interface/: statement_evaluator.py
backend/models/: speaking_state_data.py  spoken_language_data.py
backend/stream_generators/: speaking_state_stream.py  spoken_language_stream.py
backend/voice/: elevenlabs_speech_generator.py
backend/voice/interface/: speech_generator.py
frontend/hackathon_frontend/: index.html  package-lock.json  package.json
frontend/hackathon_frontend/src/: AnimatedCircle.tsx  App.tsx  Breathing.tsx  Stream.tsx
